--- a/frontends/web/src/routes/account/account.module.css
+++ b/frontends/web/src/routes/account/account.module.css
@@ -85,7 +85,6 @@
         margin-left: auto;
         margin-right: auto;
         flex-wrap: wrap;
-        gap: var(--space-quarter);
     }
 
 
